<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aşağıdaki maddelere göre yazdığınız sosyal öyküyü değerlendiriniz."
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TableLayout
        android:id="@+id/tablelayout"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
       >

    <TableRow>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Sıra No" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sorular"
            android:layout_gravity="center"/>

        <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Evet"
            android:layout_gravity="left"/>

    </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1." />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_story_form_q1"
                android:ems="10"
                android:layout_marginBottom="5dp"/>

            <RadioButton
                android:id="@+id/socialstory_q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2." />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_story_form_q2"
                android:ems="10"
                android:layout_marginBottom="5dp"/>

            <RadioButton
                android:id="@+id/socialstory_q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />


        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3." />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_story_form_q3"
                android:ems="10"
                android:layout_marginBottom="5dp"/>


            <RadioButton
                android:id="@+id/socialstory_q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4." />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_story_form_q4"
                android:ems="10"
                android:layout_marginBottom="5dp"/>

            <RadioButton
                android:id="@+id/socialstory_q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />


        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5." />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_story_form_q5"
                android:ems="10"
                android:layout_marginBottom="5dp"/>


            <RadioButton
                android:id="@+id/socialstory_q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6." />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_story_form_q6"
                android:ems="10"
                android:layout_marginBottom="5dp"/>

            <RadioButton
                android:id="@+id/socialstory_q6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7." />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_story_form_q7"
                android:ems="10"
                android:layout_marginBottom="5dp"/>


            <RadioButton
                android:id="@+id/socialstory_q7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8." />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_story_form_q8"
                android:ems="10"
                android:layout_marginBottom="5dp"/>


            <RadioButton
                android:id="@+id/socialstory_q8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

        </TableRow>
</TableLayout>
    <ImageView
        android:id="@+id/resimm"
        android:layout_width="50dp"
        android:layout_height="50dp" />
    <Button
        android:id="@+id/btn_socialstory_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:textColor="@drawable/button_text_color"
        android:text="Kaydet"
        android:layout_gravity="right"
        />

    </LinearLayout>
</ScrollView>